EEC_InitBackup/src/objects/City_Assignment__c.object
<CustomObject>
    <description>This object links a city with its default region based on the type of Provider</description>
    <fields>
        <fullName>Applicable_To__c</fullName>
        <label>Applicable To</label>
        <picklist>
            <picklistValues>
                <fullName>Family Child Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Care Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoption Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Shelter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Care</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>City</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>City Assignments</relationshipLabel>
        <relationshipName>City_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EEC_Legacy_City_Assignment_ID__c</fullName>
        <description>The External ID value as used in Licensing Manager (or other external feeder systems) for managing UPSERTS into LEAD</description>
        <externalId>true</externalId>
        <inlineHelpText>The External ID value as used in Licensing Manager (or other external feeder systems) for managing UPSERTS into LEAD</inlineHelpText>
        <label>EEC Legacy City Assignment ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>City Assignments</relationshipLabel>
        <relationshipName>City_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>City Assignment</label>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>City Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>City Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>